[package]
name = "grpc-rust"
version = "0.1.0"
authors = ["Chris Jones <cj@hanscj.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["grpc", "http2"]
repository = "https://github.com/lambdastackio/lsio"
homepage = "https://github.com/lambdastackio/lsio"
documentation = "https://github.com/lambdastackio/lsio"
description = """
lsio is the primary cli utility for the LambdaStack.io CI/CD solution.
"""

[dependencies]
