[package]
name = "grpc-rust"
version = "0.1.0"
authors = ["Chris Jones <cj@hanscj.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["grpc", "http2"]
repository = "https://github.com/lambdastackio/grpc-rust"
homepage = "https://github.com/lambdastackio/grpc-rust"
documentation = "https://github.com/lambdastackio/grpc-rust"
description = """
grpc-rust is a rust-lang specific version of gRPC. Under heavy dev *DO NOT USE* at this time.
"""

[dependencies]
errno = "*"
semver = "*"
log = "*"
env_logger = "*"
rustc-serialize = "*"
